HBT-265: MultiFormat-MultiBidder test is written. More assertion is needed